# alif_image-processing-lib

./: .gitignore  AlifSemiconductor.AIPL.pdsc  CMakeLists.txt  License.txt  README.md  aipl_config.h  aipl_config_template.h  gen_pack.sh
cmake/toolchains/: arm-armclang.cmake
cmsis/: gen_pack.sh
include/: aipl_arm_mve.h  aipl_bayer.h  aipl_cache.h  aipl_color_conversion.h  aipl_color_correction.h  aipl_color_formats.h  aipl_config.h  aipl_crop.h  aipl_dave2d.h  aipl_demosaic.h  aipl_error.h  aipl_flip.h  aipl_image.h  aipl_lut_transform.h  aipl_mve_utils.h  aipl_resize.h  aipl_rotate.h  aipl_utils.h  aipl_video_alloc.h  aipl_white_balance.h
include/dave2d/: aipl_color_conversion_dave2d.h  aipl_crop_dave2d.h  aipl_flip_dave2d.h  aipl_resize_dave2d.h  aipl_rotate_dave2d.h
include/default/: aipl_bayer_default.h  aipl_color_conversion_default.h  aipl_color_correction_default.h  aipl_crop_default.h  aipl_demosaic_default.h  aipl_flip_default.h  aipl_lut_transform_default.h  aipl_resize_default.h  aipl_rotate_default.h  aipl_white_balance_default.h
include/helium/: aipl_bayer_helium.h  aipl_color_conversion_helium.h  aipl_color_correction_helium.h  aipl_demosaic_helium.h  aipl_flip_helium.h  aipl_lut_transform_helium.h  aipl_resize_helium.h  aipl_rotate_helium.h  aipl_white_balance_helium.h
source/: aipl_bayer.c  aipl_cache.c  aipl_color_conversion.c  aipl_color_correction.c  aipl_color_formats.c  aipl_crop.c  aipl_dave2d.c  aipl_demosaic.c  aipl_error.c  aipl_flip.c  aipl_image.c  aipl_lut_transform.c  aipl_resize.c  aipl_rotate.c  aipl_video_alloc.c  aipl_white_balance.c
source/dave2d/: aipl_color_conversion_dave2d.c  aipl_crop_dave2d.c  aipl_flip_dave2d.c  aipl_resize_dave2d.c  aipl_rotate_dave2d.c
source/default/: aipl_bayer_default.c  aipl_color_conversion_default.c  aipl_color_correction_default.c  aipl_crop_default.c  aipl_demosaic_default.c  aipl_flip_default.c  aipl_lut_transform_default.c  aipl_resize_default.c  aipl_rotate_default.c  aipl_white_balance_default.c
source/helium/: aipl_bayer_helium.c  aipl_color_conversion_helium.c  aipl_color_correction_helium.c  aipl_demosaic_helium.c  aipl_flip_helium.c  aipl_lut_transform_helium.c  aipl_resize_helium.c  aipl_rotate_helium.c  aipl_white_balance_helium.c
zephyr/: CMakeLists.txt  Kconfig  aipl_config.h  module.yml
